--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -2,9 +2,13 @@ apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
   name: spring-petclinic-tap-demo
+  namespace: dev
   labels:
     apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/has-tests: "true"
     app.kubernetes.io/part-of: spring-petclinic-tap-demo
+  annotations:
+    autoscaling.knative.dev/minScale: "1"
 spec:
   source:
     git:
